fixed caret to fall behind the footer

--- a/styles.css
+++ b/styles.css
@@ -53,6 +53,7 @@
   padding: 100px 0;
   text-align: center;
   align-items: center;
+  margin-bottom: 0;
 }
 
 .project {
@@ -140,7 +141,7 @@ h5 {
   bottom: 20px;
   left: 50%;
   transform: translateX(-50%);
-  z-index: 999; /* Ensure it's above other content */
+
 }
 
 .arrow {
@@ -151,6 +152,8 @@ h5 {
   background-repeat: no-repeat;
   cursor: pointer;
   animation: bounce 0.5s infinite alternate; /* Bounce animation */
+  position: relative; /* Ensure it's positioned relative to its parent */
+  z-index: 0; /* Set a lower z-index to ensure it's behind the footer */
 }
 
 @keyframes bounce {
@@ -342,7 +345,8 @@ h5 {
   transition: opacity 0.8s ease; /* Add transition effect */
   text-align: center;
   margin-top: 20px;
-  text-align: left;
+  text-align: center;
+  padding: 10%;
 }
 
 .role:hover {
@@ -367,4 +371,7 @@ h5 {
   font-family: "M PLUS Code Latin", monospace;
   color:#666;
   font-size: small;
+  z-index: 1000;
+  opacity: none;
+  position: sticky;
 }
